wrap MultiGeoPointValues into generic type (#42863)
To aid in keeping aggregation logic as simple as possible,
the MultiGeoPointValues object that returns GeoPoint values
for fields from doc-values is updated to return implementations
of a geo-value object that can represent either points or shapes.