@@ -22,15 +22,15 @@ import org.apache.lucene.geo.GeoEncodingUtils;
 import org.elasticsearch.common.geo.builders.ShapeBuilder;
 import org.elasticsearch.common.io.stream.ByteBufferStreamInput;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
-import org.elasticsearch.geo.geometry.Polygon;
-import org.elasticsearch.geo.geometry.ShapeType;
+import org.elasticsearch.geometry.Polygon;
+import org.elasticsearch.geometry.ShapeType;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.geo.RandomShapeGenerator;
 import org.locationtech.spatial4j.shape.Rectangle;
 
 import java.io.IOException;
 import java.nio.ByteBuffer;
-import java.util.List;
+import java.util.Arrays;
 import java.util.function.Function;
 
 import static org.hamcrest.Matchers.equalTo;
@@ -146,7 +146,7 @@ public class EdgeTreeTests extends ESTestCase {
         int[] pointCoord = new int[] { 0 };
         assertThat(new EdgeTreeWriter(pointCoord, pointCoord, true).getShapeType(), equalTo(ShapeType.POLYGON));
         assertThat(new EdgeTreeWriter(pointCoord, pointCoord, false).getShapeType(), equalTo(ShapeType.LINESTRING));
-        assertThat(new EdgeTreeWriter(List.of(pointCoord, pointCoord), List.of(pointCoord, pointCoord), false).getShapeType(),
+        assertThat(new EdgeTreeWriter(Arrays.asList(pointCoord, pointCoord), Arrays.asList(pointCoord, pointCoord), false).getShapeType(),
             equalTo(ShapeType.MULTILINESTRING));
     }
 
